--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,9 +15,29 @@ env:
   FORCE_COLOR: "1"
 
 jobs:
+  fmt:
+    name: Format code
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.x
+        cache: pip
+
+    - name: Install Hatch
+      run: pip install --upgrade hatch
+
+    - name: Run static analysis
+      run: hatch fmt --check
+  
   run:
     name: Python ${{ matrix.python-version }} on ${{ startsWith(matrix.os, 'macos-') && 'macOS' || startsWith(matrix.os, 'windows-') && 'Windows' || 'Linux' }}
     runs-on: ${{ matrix.os }}
+    needs: fmt
     strategy:
       fail-fast: false
       matrix:
@@ -35,8 +55,8 @@ jobs:
     - name: Install Hatch
       run: pip install --upgrade hatch
 
-    - name: Run static analysis
-      run: hatch fmt --check
+    - name: Build
+      run: hatch build
 
     - name: Run tests
       run: hatch test --python ${{ matrix.python-version }} --cover --randomize --parallel --retries 2 --retry-delay 1
