--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -62,4 +62,4 @@ jobs:
       run: hatch build
 
     - name: Run tests
-      run: hatch test --python ${{ matrix.python-version }} --cover --randomize --parallel --retries 2 --retry-delay 1
+      run: hatch test --python ${{ matrix.python-version }} --cover --retries 2 --retry-delay 1
