--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,6 +28,11 @@ jobs:
         python-version: 3.x
         cache: pip
 
+    - uses: actions/setup-java@v4
+      with:
+        distribution: 'temurin'
+        java-version-file: '.java-version'
+
     - name: Install Hatch
       run: pip install --upgrade hatch
 
@@ -60,8 +65,6 @@ jobs:
         distribution: 'temurin'
         java-version-file: '.java-version'
 
-
-
     - name: Install Hatch
       run: pip install --upgrade hatch
 
@@ -69,4 +72,4 @@ jobs:
       run: hatch build
 
     - name: Run tests
-      run: hatch test --python ${{ matrix.python-version }} --cover --retries 2 --retry-delay 1
+      run: hatch test --python ${{ matrix.python-version }} --cover --retries 2 --retry-delay 1 -v -- -v
