--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,7 +41,9 @@ jobs:
 
     - name: Build
       run: hatch build
-
+    
+    - name: Test
+      run: hatch test --cover --retries 2 --retry-delay 1 -v -- -v
   test:
     name: Python ${{ matrix.python-version }} on ${{ startsWith(matrix.os, 'macos-') && 'macOS' || startsWith(matrix.os, 'windows-') && 'Windows' || 'Linux' }}
     runs-on: ${{ matrix.os }}
