--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,9 @@ jobs:
 
     - name: Build artifacts
       run: hatch build --ext
-  
+    
+    - name: Test
+      run: hatch test --cover --retries 2 --retry-delay 1 -v
   test:
     name: Python ${{ matrix.python-version }} on ${{ startsWith(matrix.os, 'macos-') && 'macOS' || startsWith(matrix.os, 'windows-') && 'Windows' || 'Linux' }}
     runs-on: ${{ matrix.os }}
