--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,9 +62,10 @@ fix = true
 [[tool.hatch.build.hooks.build-scripts.scripts]]
 commands = [
   "javac -d build/java ./src/java/com/bluegate/shared/*.java",
+  "rm -rf src/palgate_py/palgate/lib/palgate.jar || true",
   "jar cf src/palgate_py/palgate/lib/palgate.jar -C build/java .",
 ]
-artifacts = ["palgate-py.jar"]
+artifacts = []
 
 [tool.hatch.build]
 skip-excluded-dirs = true
